--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                 <div class="row">
 				
                     <script type="text/javascript">
-                        var skills = ["C/C++(STL)", "Python(Flask)", "Javascript", "Java/Android"];
-                        var value = [80, 85, 70, 80, 60, 60, 90, 60];
+                        var skills = ["C++", "Android", "MySQL", "Photography"];
+                        var value = [65, 82, 65, 88];
                         for (let i = 0; i < skills.length; i++) {
                             var dir = (i % 2 == 0) ? "Right" : "Left";
                             document.write(
