--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
 			
                 <a href="https://join.skype.com/invite/VXybLHoBnfsT"><i class="fa fa-skype"></i></a>
 								
-			<a href="https://twitter.com/nirala_mehul"><i class="fa fa-stack-overflow"></i></a>
-                <a href="skype:live:.cid.fd89af8f47d6b546"><i class="fa fa-skype"></i></a>
+			<a href="https://twitter.com/ashishk3138"><i class="fa fa-stack-overflow"></i></a>
+               
             </div>
             <p></p>
             <i class="fa fa-chevron-up blue" style="color:#bbb;" onclick="window.scroll({  top: 0,  left: 0,  behavior: 'smooth'});"></i>
