--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="fixed-content">
 			
             <h1>About Me</h1>
-            <p>Birthday on July 27th,Foodis,.My Passion is to become a businessman.</p>
+            <p>Birthday on July 27th,Foodis.My Passion is to become a businessman.</p>
         </div>
     </div>
 
@@ -86,8 +86,8 @@
                 <div class="row">
 				
                     <script type="text/javascript">
-                        var skills = ["C++", "Android", "MySQL", "Photography"];
-                        var value = [40, 65, 35, 70];
+                        var skills = ["C++", "Android", "MySQL", "Photography","Drawing"];
+                        var value = [40, 65, 35, 68, 75];
                         for (let i = 0; i < skills.length; i++) {
                             var dir = (i % 2 == 0) ? "Right" : "Left";
                             document.write(
