--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                  
                                 var internType = ["B.D.Academy", "Sree Ayyappa Public School","Adamas University"];
                                 var descriptions = ["Class-UKG-10th",
-                                    "Class 11th&12th"," "Bachelor Of Business Administration (BBA)"
+                                    "Class 11th&12th","Bachelor Of Business Administration (BBA)"
                                     
                                 ];
                                 var iclass = ["user", "code", "globe"];
