--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 																
    
                                 var color = [5, 1, 2];
-                                for (let i = 0; i < AT.length; i++) {
+                                for (let i = 0; i < internType.length; i++) {
                                     var dir = (i % 2 == 0) ? "Right" : "Left";
                                     document.write(
                                         '<article class="timeline-entry animate-box" data-animate-effect="fadeIn' + dir + '">\
@@ -148,7 +148,7 @@
 												<i class="fa fa-' + iclass[i] + '"></i>\
 											</div>\
 											<div class="timeline-label">\
-												<h2><a href="#">' + AT[i] + '</a> <span>' + timeSpan[i] + '</span></h2>\
+												<h2><a href="#">' + '' + '</a> <span>' + timeSpan[i] + '</span></h2>\
 												<p><strong><a href="#">' + internType[i] + '</a></strong>\
 													<br> ' + descriptions[i] + '</p>\
 												<p></p>\
