--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		  </label>
 		</div>
         <div class="fixed-content">
-            <img class="port" src="https://www.photobox.co.uk/my/photo?album_id=5899867485&photo_id=503162251403">
+            <img class="port" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/95581/cat.jpg">
             <h2>Ashish Kumar</h2>
             <p style="color:#fff;">Commerce Student</p>
             <div class="icon-row">
