--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
         <div class="fixed-content">
 			
             <h1>About Me</h1>
-            <p>Birthday on July 27th,Foodis.My Passion is to become a businessman.</p>
+            <p>Birthday on July 27th</p>
+		<p> Foodis</p>
+		<h2>Hobbies</h2>
+		<p> Eating,Sleeping and Travelling</p>
         </div>
     </div>
 
@@ -87,7 +90,7 @@
 				
                     <script type="text/javascript">
                         var skills = ["C++", "Android", "MySQL", "Photography","Drawing"];
-                        var value = [40, 65, 35, 68, 75];
+                        var value = [40, 80, 30, 60, 70];
                         for (let i = 0; i < skills.length; i++) {
                             var dir = (i % 2 == 0) ? "Right" : "Left";
                             document.write(
